--- a/photography/photographystyles.css
+++ b/photography/photographystyles.css
@@ -154,10 +154,12 @@ body {
 	
 	.objectportrait img {
 		width: 100%;
+		object-fit: cover;
 	}
 	
 	.objectlandscape img {
 		height: 100%;
+		object-fit: cover;
 	}
 	
 	.back {
