--- a/styles.css
+++ b/styles.css
@@ -174,12 +174,12 @@ svg {
 	}
   }
 
-  .move {
+  .onwardlink {
 	grid-column: 1 / 3;
 	grid-row: 5 / 6;
   }
 
-  .move a {
+  .onwardlink a {
 	color: var(--maintext);
 	font-family: 'Tsukimi Rounded', sans-serif;
 	font-size: 4vh;
@@ -249,43 +249,32 @@ svg {
 
 	.windowcontainer img {
 		width: 18vw;
-		vertical-align: bottom;
-		border-radius: 0 0 3px 3px;
-		filter: grayscale(1);
-		animation: colour 2s 1 forwards;
-		animation-delay: 2s;
 	}
 
 	#window1 {
 		grid-column: 1 / 2;
 		grid-row: 1 / 2;
-	  }
+	}
 	
-	  #window2 {
+	#window2 {
 		grid-column: 1 / 2;
 		grid-row: 2 / 3;
-	  }
+	}
 	
-	  #window3 {
+	#window3 {
 		grid-column: 1 / 2;
 		grid-row: 3 / 4;
-	  }
+	}
 
 	  svg {
-		height: 100vh;
-		width: 100vw;
-		background-color: transparent;
-		z-index: -2;
-		grid-column: 1 / 3;
 		grid-row: 2 / 3;
 	  }
 
 	  #fishholder {
 		grid-column: 2 / 3;
 		grid-row: 2 / 3;
-		align-self: end;
 		z-index: -1;
-		transform : translateX(800px);
+		transform : translateX(2000px);
 		animation: surface 2s 1 forwards;
 		animation-delay: 2s;
 	  }
@@ -296,8 +285,8 @@ svg {
 	  }
 
 	  @keyframes surface {
-		0% { transform: translateX(800px);}
-		100% { transform: translateY(40px);}
+		0% { transform: translateX(2000px);}
+		100% { transform: translateX(40px);}
 	  }
 	
 	  @keyframes fishbob {
@@ -305,18 +294,8 @@ svg {
 		100% { transform: translateY(100px);}
 	  }
 
-	  .move {
+	  .onwardlink {
 		grid-column: 1 / 3;
 		grid-row: 4 / 5;
-	  }
-	
-	  .move a {
-		color: var(--maintext);
-		font-family: 'Tsukimi Rounded', sans-serif;
-		font-size: 4vh;
-		opacity: 0;
-		animation: dive 2s 1 forwards;
-		animation-delay: 2s;
-		text-decoration: none;
 	  }
   }
